Corrected unreadable colors in code snippets (fixes #1)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
   @import "modules/messaging/dense";
   @import "modules/messaging/banners";
   @import "modules/messaging/attachments";
+  @import "modules/messaging/code-snippets";
 
   @import "modules/flexpane/base";
   @import "modules/flexpane/channel";
