Added styles for tabcomplete menu (fixes #3)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
   @import "modules/menu/popover";
   @import "modules/menu/calendar";
   @import "modules/menu/autocomplete";
+  @import "modules/menu/tabcomplete";
   @import "modules/menu/flex";
   @import "modules/menu/filters";
 
