Added styles for lightbox (fixes #4)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,7 @@
   @import "modules/emojis/reactions";
 
   @import "modules/modals/base";
+  @import "modules/modals/lightbox";
   @import "modules/modals/preferences";
   @import "modules/modals/invite";
   @import "modules/modals/omnibox";
