Removed unnecessary border which caused lightbox offset

--- a/scss/modules/modals/_base.scss
+++ b/scss/modules/modals/_base.scss
@@ -1,6 +1,6 @@
 .modal {
   background-color: $color-base;
-  border: 1px solid $color-shade-darkest;
+  border: 0;
   box-shadow: 0 1px 10px $color-shadow-dark;
 
   .close,
