Properly implemented font-family overriding (fixes #2)

--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -26,4 +26,4 @@ $color-shadow-light: rgba(0, 0, 0, 0.15) !default;
 $color-shadow-transparent: rgba(255, 255, 255, 0) !default;
 
 // Font Families
-$base-font-family: inherit !default;
+// $base-font-family may be set in themes to override the chat font-family
