--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,7 +33,8 @@
   @import "modules/messaging/dense";
   @import "modules/messaging/banners";
   @import "modules/messaging/attachments";
-  @import "modules/messaging/code-snippets";
+  @import "modules/messaging/quotes";
+  @import "modules/messaging/code";
 
   @import "modules/flexpane/base";
   @import "modules/flexpane/channel";
