Corrected rule typo which caused unread count badges to be unstyled

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -15,7 +15,7 @@
     }
   }
 
-  .channels_list_holder ul li {
+  &.channels_list_holder ul li {
     &.channel.active .unread_highlight,
     &.group.active .unread_highlight,
     &.member.active .unread_highlight {
