--- a/css/default.css
+++ b/css/default.css
@@ -34,7 +34,7 @@
     #col_channels ul li.channel.active a.channel_name, #col_channels ul li.group.active a.group_name, #col_channels ul li.member.active a.im_name {
       background: #61485e;
       color: #f0d9ed; }
-    #col_channels .channels_list_holder ul li.channel.active .unread_highlight, #col_channels .channels_list_holder ul li.group.active .unread_highlight, #col_channels .channels_list_holder ul li.member.active .unread_highlight {
+    #col_channels.channels_list_holder ul li.channel.active .unread_highlight, #col_channels.channels_list_holder ul li.group.active .unread_highlight, #col_channels.channels_list_holder ul li.member.active .unread_highlight {
       background: #3e313c;
       color: #f0d9ed; }
 
@@ -436,8 +436,7 @@
     background-color: #4d394b; }
 
   #message-input-message {
-    color: #a3839f;
-    font-family: inherit; }
+    color: #a3839f; }
 
   #message_edit_form #message-input,
   #messages-input-container #message-input {
@@ -496,7 +495,8 @@
   #menu,
   .menu_example {
     background: #372c36;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+    border: 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     color: #f0d9ed; }
 
   #menu .section_header .header_label,
@@ -522,7 +522,7 @@
   #menu ul li a,
   .menu_example ul li a {
     background: #3e313c;
-    border-bottom: 1px solid #4d394b;
+    border-bottom: 0;
     color: #a3839f; }
 
   #menu ul li.highlighted a {
@@ -916,15 +916,15 @@
     color: #a3839f; }
 
   .flexpane_toggle_button {
-    border: 1px solid rgba(135, 100, 132, 0.1);
+    border: 1px solid rgba(135, 100, 132, 0.61);
     color: #a3839f; }
     .flexpane_toggle_button#details_toggle.active, .flexpane_toggle_button#flex_menu_toggle.active, .flexpane_toggle_button#recent_mentions_toggle.active, .flexpane_toggle_button#stars_toggle.active {
       background-color: #876484;
-      border-color: rgba(97, 72, 94, 0.12);
+      border-color: #4d394b;
       color: #f0d9ed; }
       .flexpane_toggle_button#details_toggle.active:hover, .flexpane_toggle_button#flex_menu_toggle.active:hover, .flexpane_toggle_button#recent_mentions_toggle.active:hover, .flexpane_toggle_button#stars_toggle.active:hover {
         background-color: #876484;
-        border-color: rgba(97, 72, 94, 0.12);
+        border-color: rgba(77, 57, 75, 0.61);
         color: #f0d9ed; }
     .flexpane_toggle_button#details_toggle:hover {
       color: #f0d9ed; }
@@ -1010,6 +1010,8 @@
     border: 1px solid #876484;
     border-radius: 3px;
     padding: 2px; }
+  body:not(.feature_new_message_markup) .message a .mention {
+    color: #f0d9ed; }
   body:not(.feature_new_message_markup) .message .inline_color_block {
     border: 1px solid #4d394b; }
   body:not(.feature_new_message_markup) .message.unprocessed {
@@ -1112,8 +1114,7 @@
     color: #a3839f; }
 
   .light_theme .message {
-    color: #f0d9ed;
-    font-family: inherit; }
+    color: #f0d9ed; }
     .light_theme .message.unprocessed {
       color: rgba(240, 217, 237, 0.75); }
     .light_theme .message .timestamp {
@@ -1141,8 +1142,7 @@
     color: #a3839f; }
 
   .dense_theme .message {
-    color: #f0d9ed;
-    font-family: inherit; }
+    color: #f0d9ed; }
     .dense_theme .message.unprocessed {
       color: rgba(240, 217, 237, 0.75); }
     .dense_theme .message .timestamp {
@@ -1180,7 +1180,7 @@
     .dense_theme .file_reference:hover a.file_download_link:hover {
       color: #d4bbd1 !important; }
   .dense_theme .msg_inline_video {
-    border: 1px solid #a3839f; }
+    border: 1px solid #4d394b; }
 
   .messages_banner {
     color: #f0d9ed;
@@ -1287,18 +1287,201 @@
   .delete_attachment_link:hover {
     color: #d4bbd1; }
 
-  .sssh-variable {
-    color: #3cbf0c; }
+  pre {
+    background: #372c36;
+    border: 1px solid #4d394b;
+    color: #f0d9ed; }
+    pre span.mention {
+      padding: 2px 0 !important; }
 
-  .sssh-operator,
-  .sssh-property {
+  #page pre,
+  .backup_codes_wrapper,
+  body > pre {
+    background: #372c36;
+    color: #f0d9ed !important; }
+
+  body > pre {
+    background: #876484; }
+
+  code {
+    background-color: #372c36;
+    border: 1px solid #4d394b;
+    color: #a3839f; }
+
+  .file_list_item.snippet .snippet_preview {
+    background: #372c36; }
+
+  .snippet_preview {
+    background: #372c36; }
+    .snippet_preview pre {
+      color: #f0d9ed; }
+
+  .CodeMirror {
+    background: #372c36;
+    border: 1px solid #4d394b;
+    color: #f0d9ed; }
+    .CodeMirror div.CodeMirror-cursor {
+      border-left: 1px solid #f0d9ed; }
+    .CodeMirror.cm-fat-cursor div.CodeMirror-cursor {
+      background: #f0d9ed; }
+
+  .CodeMirror-gutter-filler,
+  .CodeMirror-scrollbar-filler {
+    background-color: #4d394b; }
+
+  .CodeMirror-gutters {
+    background-color: #4d394b;
+    border-right: 1px solid #3e313c; }
+
+  .CodeMirror-linenumber {
+    color: #a3839f; }
+
+  .CodeMirror-guttermarker {
+    color: #a3839f; }
+
+  .CodeMirror-guttermarker-subtle {
+    color: #a3839f; }
+
+  .CodeMirror-ruler {
+    border-left: 1px solid #876484; }
+
+  .cm-s-default .cm-keyword {
+    color: #ce93d8; }
+  .cm-s-default .cm-atom {
+    color: #9fa8da; }
+  .cm-s-default .cm-number {
+    color: #a5d6a7; }
+  .cm-s-default .cm-def {
+    color: #536dfe; }
+  .cm-s-default .cm-variable-2 {
+    color: #9fa8da; }
+  .cm-s-default .cm-variable-3 {
+    color: #c5e1a5; }
+  .cm-s-default .cm-comment {
+    color: #ffcc80; }
+  .cm-s-default .cm-string {
+    color: #ef9a9a; }
+  .cm-s-default .cm-string-2 {
+    color: #ffab91; }
+  .cm-s-default .cm-meta {
+    color: #eee; }
+  .cm-s-default .cm-qualifier {
+    color: #eee; }
+  .cm-s-default .cm-builtin {
+    color: #b39ddb; }
+  .cm-s-default .cm-bracket {
+    color: #e6ee9c; }
+  .cm-s-default .cm-tag {
+    color: #a5d6a7; }
+  .cm-s-default .cm-attribute {
+    color: #40c4ff; }
+  .cm-s-default .cm-header {
+    color: #80cbc4; }
+  .cm-s-default .cm-quote {
+    color: #b0bec5; }
+  .cm-s-default .cm-hr {
+    color: #4d394b; }
+  .cm-s-default .cm-link {
+    color: #a3839f; }
+
+  .cm-negative {
+    color: #bf360c; }
+
+  .cm-positive {
     color: #0c95bf; }
 
+  .cm-invalidchar,
+  .cm-s-default .cm-error {
+    color: #bf360c; }
+
+  div.CodeMirror span.CodeMirror-matchingbracket {
+    color: #0c95bf; }
+  div.CodeMirror span.CodeMirror-nonmatchingbracket {
+    color: #bf360c; }
+
+  .CodeMirror-matchingtag {
+    background: #372c36; }
+
+  .CodeMirror-activeline-background {
+    background: #876484; }
+
+  .CodeMirror-selected {
+    background: #3e313c; }
+
+  .CodeMirror-focused .CodeMirror-selected {
+    background: #3e313c; }
+
+  .cm-searching {
+    background: #876484; }
+
+  .sssh-keyword {
+    color: #ce93d8; }
+
+  .sssh-atom {
+    color: #9fa8da; }
+
+  .sssh-number {
+    color: #a5d6a7; }
+
+  .sssh-def {
+    color: #536dfe; }
+
+  .sssh-variable {
+    color: #9fa8da; }
+
+  .sssh-variable-2 {
+    color: #c5e1a5; }
+
+  .sssh-variable-3 {
+    color: #c1a5e1; }
+
+  .sssh-operator {
+    color: #f0d9ed; }
+
+  .sssh-property {
+    color: #f0d9ed; }
+
+  .sssh-comment {
+    color: #ffcc80; }
+
+  .sssh-string {
+    color: #ef9a9a; }
+
+  .sssh-string-2 {
+    color: #ffab91; }
+
   .sssh-meta {
-    color: #fff; }
+    color: #eee; }
+
+  .sssh-error {
+    color: #bf360c; }
 
   .sssh-qualifier {
-    color: #fff; }
+    color: #eee; }
+
+  .sssh-builtin {
+    color: #b39ddb; }
+
+  .sssh-bracket {
+    color: #e6ee9c; }
+
+  .sssh-tag {
+    color: #a5d6a7; }
+
+  .sssh-attribute {
+    color: #40c4ff; }
+
+  .sssh-header {
+    color: #80cbc4; }
+
+  .sssh-quote {
+    color: #b0bec5; }
+
+  .sssh-hr {
+    color: #4d394b; }
+
+  .sssh-link {
+    color: #a3839f; }
 
   #flex_contents {
     background: #3e313c; }
@@ -2048,6 +2231,19 @@
     background: #bf360c;
     color: #f0d9ed; }
 
+  .tooltip-inner {
+    background-color: #876484;
+    color: #f0d9ed; }
+
+  .tooltip.top .tooltip-arrow, .tooltip.top-left .tooltip-arrow {
+    border-top-color: #876484; }
+  .tooltip.right .tooltip-arrow {
+    border-right-color: #876484; }
+  .tooltip.left .tooltip-arrow {
+    border-left-color: #876484; }
+  .tooltip.bottom .tooltip-arrow {
+    border-bottom-color: #876484; }
+
   #coachmark.channels_coachmark_div {
     background: #61485e; }
     #coachmark.channels_coachmark_div #coachmark_callout,
@@ -2108,22 +2304,6 @@
     -moz-filter: brightness(0.6) contrast(3) invert(1) sepia(0.5);
     -webkit-filter: brightness(0.6) contrast(3) invert(1) sepia(0.5);
     filter: brightness(0.6) contrast(3) invert(1) sepia(0.5); }
-
-  .CodeMirror,
-  .snippet_preview {
-    -moz-filter: hue-rotate(180deg) invert(1) saturate(10);
-    -webkit-filter: hue-rotate(180deg) invert(1) saturate(10);
-    filter: hue-rotate(180deg) invert(1) saturate(10); }
-    .CodeMirror pre,
-    .snippet_preview pre {
-      color: #fff; }
-
-  code,
-  pre,
-  .backup_codes_wrapper {
-    -moz-filter: hue-rotate(180deg) invert(1) opacity(0.8) saturate(10);
-    -webkit-filter: hue-rotate(180deg) invert(1) opacity(0.8) saturate(10);
-    filter: hue-rotate(180deg) invert(1) opacity(0.8) saturate(10); }
 
   .section {
     background: #f3f3f3;
