--- a/scss/modules/tooltips/_base.scss
+++ b/scss/modules/tooltips/_base.scss
@@ -8,9 +8,24 @@
     color: $base-font-color;
   }
 
-  &.ts_tip_left,
-  &.ts_tip_right,
-  &.ts_tip_top,
+  &.ts_tip_left {
+    .ts_tip_tip:after {
+      border-left-color: $color-shade-light;
+    }
+  }
+
+  &.ts_tip_right {
+    .ts_tip_tip:after {
+      border-right-color: $color-shade-light;
+    }
+  }
+
+  &.ts_tip_top {
+    .ts_tip_tip:after {
+      border-top-color: $color-shade-light;
+    }
+  }
+
   &.ts_tip_bottom {
     .ts_tip_tip:after {
       border-bottom-color: $color-shade-light;
